15-AIIA Final submitted version

--- a/doc/papers/15-AIIA/coaches.bib
+++ b/doc/papers/15-AIIA/coaches.bib
@@ -30,11 +30,10 @@ doi={10.1109/ICAR.2013.6766501},
 url={http://www.dis.uniroma1.it/~gemignani/documents/papers/13-icar.pdf}
 }
 
-@InProccedings{CoCe14,
-author = {Coradeschi, S. and  Cesta, A. and  Cortellessa, G. and  Coraci, L. and  Galindo, C. and  Gonzalez, J.
- and  Karlsson, L. and  Forsberg, A. and  Frennert, S. and  Furfari, F. and
- Loutfi, A. and Orlandini, A. and  Palumbo, F. and  Pecora, F. and  von Rump, S. and
- Stimec,  A. and  Ullberg, J. and  Ötslund, B.},
+%and  Cesta, A. and  Cortellessa, G. and  Coraci, L. and  Galindo, C. and  Gonzalez, J. and  Karlsson, L. and  Forsberg, A. and  Frennert, S. and  Furfari, F. and Loutfi, A. and Orlandini, A. and  Palumbo, F. and  Pecora, F. and  von Rump, S. and Stimec,  A. and  Ullberg, J. and  Ötslund, B.},
+
+@InProceedings{CoCe14,
+author = {Coradeschi et al., S.},
 title = {{GiraffPlus}: A System for Monitoring Activities and Physiological Parameters and Promoting Social Interaction for Elderly},
 booktitle = {Human-Computer Systems Interaction: Backgrounds and Applications 3 Advances in Intelligent Systems and Computing},
 volume=300,
@@ -43,7 +42,7 @@ doi   = {10.1007/978-3-319-08491-6\_22},
 year = 2014
 }
 
-@InProccedings{BuCr98,
+@InProceedings{BuCr98,
   title = {The Interactive Museum Tour-Guide Robot},
   author = {Burgard, W. and  Cremers, A. B. and Fox, D. and  Hähnel, D.
   and  Lakemeyer, G. and  Schulz, D. and  Steiner, W. and  Thrun, S.},
@@ -70,6 +69,13 @@ year = 2014
   year = 2001
 }
 
+@string{ECMR="Proc. of the European Conference on Mobile Robots (ECMR)"}
+@InProceedings{Capobianco2015,
+  Title                    = {A Proposal for Semantic Map Representation and Evaluation},
+  Author                   = {Capobianco, R. and Serafin, J.  and Dichtl, J. and Grisetti, G. and Iocchi, L. and Nardi, D.},
+  Booktitle                = ECMR,
+  Year                     = {2015},
+}
 
 
 
