--- a/doc/papers/15-AIIA/intro.tex
+++ b/doc/papers/15-AIIA/intro.tex
@@ -1,7 +1,7 @@
 \section{Introduction}
 \label{sec:intro}
 
-Public spaces in large cities are increasingly becoming complex and unwelcoming environments because of the overcrowding and complex information in signboards. It is in the interest of cities to make their public spaces easier to use, friendlier to visitors and safer to increasing elderly population and to the people with disabilities.
+Public spaces in large cities are becoming increasingly complex and unwelcoming environments because of the overcrowding and complex information in signboards. It is in the interest of cities to make their public spaces easier to use, friendlier to visitors and safer to increasing elderly population and to the people with disabilities.
 %
 In the last decade, we observe tremendous progress in the development of robots in dynamic environments populated by people. There are thus big expectations in the deployment of robots in public areas (malls, touristic sites, parks, etc.) to offer services to welcome people in the environment and improve its usability by visitors, elderly or disabled people. 
 
@@ -16,7 +16,7 @@ Such application domains require robots with new capabilities leading to new sci
 \label{fig:env}
 \end{figure}
 
-The main goal of the \coaches project (October 2014 - September 2017)  is to develop robots that can suitable interact with users in a complex large public environment, like a shopping mall.
+The main goal of the \coaches project (October 2014 - September 2017)  is to develop robots that can suitably interact with users in a complex large public environment, like a shopping mall.
 Figure \ref{fig:env} shows the \emph{Rive de l'orne} shooping mall in Caen (France) where the experimental activities of the project will be carried out, as well as a prototype of the robot that will be used.
 
 
