--- a/doc/papers/15-AIIA/main.tex
+++ b/doc/papers/15-AIIA/main.tex
@@ -3,6 +3,7 @@
 \usepackage{epsfig}
 \usepackage{color}
 \usepackage{listings}
+\usepackage[misc]{ifsym}
 
 %\renewcommand{\baselinestretch}{0.98}
 
@@ -34,8 +35,10 @@ Cooperative Autonomous Robots in Complex and Human Populated Environments}
 %\titlerunning{SPQR}  % abbreviated title (for running head)
 %                                     also used for the TOC unless
 %                                     \toctitle is used
-%
-\author{L. Iocchi$^1$,  M. T. L\'azaro$^1$,  L. Jeanpierre$^2$, A.-I. Mouaddib$^2$, E. Erdem$^3$, H. Sahli$^4$ \\
+%  L. Iocchi,  M. T. Lazaro,  L. Jeanpierre, A.-I. Mouaddib, E. Erdem, H. Sahli
+
+\author{L. Iocchi$^1$ \Letter,  M. T. L\'azaro$^1$,  L. Jeanpierre$^2$, A.-I. Mouaddib$^2$,\\
+E. Erdem$^3$, H. Sahli$^4$ \\
 $\,$\\
 $^1$ DIAG, % Department of Computer, Control, and Management Engineering\\ 
 Sapienza University of Rome, Italy\\
