--- a/doc/papers/15-AIIA/AI.tex
+++ b/doc/papers/15-AIIA/AI.tex
@@ -65,7 +65,7 @@ In this section we describe the Markov Decision Process (MDP) used to model the 
 
 \paragraph{{\bf Task structure.}}
 
-The result of the reasoning module (KB module) is a set of goals $G = \{ g_{1}, g_{2}, \ldots, g_{k} \}$ concerning advertisement, patrolling, assisting and escorting.  We note also that advertising goals could be performed in parallel with the moving ones.  Consequently, the task structure is a hierarchy of modules to execute. This structure is  inspired by progressive processing units \cite{CarMouIjcai01}, that we  name PRU+. In our application, we define four PRU+. Each PRU+ is composed of levels where the first level concerns the execution of the subtask {\sc goto site $X$}, the second level concerns the advertisement at a location $(x,y)$ and the third level consists of {\sc do task $X$} where $X$ could be  the assistance, the patrolling, the escorting or the surveillance.% (see Figure \ref{FigureEscortTask}). 
+The result of the reasoning module (KB module) is a set of goals $G = \{ g_{1}, g_{2}, \ldots, g_{k} \}$ concerning advertisement, patrolling, assisting and escorting.  We note also that advertising goals could be performed in parallel with the moving ones.  Consequently, the task structure is a hierarchy of modules to execute. This structure is  inspired by progressive processing units \cite{CarMouIjcai01}, that we  name PRU+. In our application, we define four PRU+. Each PRU+ is composed of levels where the first level concerns the execution of the subtask {\sc goto site $X$}, the second level concerns the advertisement at a location $(x,y)$ and the third level consists of {\sc do task $X$} where $X$ could be  the assistance, the patrolling, the escorting or the surveillance. % (see Figure \ref{FigureEscortTask}). 
 With such task structures we can also define some joint goals requiring joint PRU+.  For example, escorting a people from one location in a building to another location in the other building requires a cooperation between robots. Indeed, the first robot executes a policy of PRU+ for escorting a user to the exit of the first building, provide him/her information to reach the other building and then send information to the other robots in the other building to continue the escorting task at the second building. The structure of tasks we propose for single robot tasks is  {\sc \{goto $x$, advertisement, do $x$\}}, while for the joint task is {\sc \{goto $x$, advertisement, inform people, send message to the other robots\}}. 
 The task {\sc do $x$} concerns different tasks of assistance. 
 
@@ -117,18 +117,20 @@ More formally, a PRU+ is defined by a set of levels $\{ l_{1}, l_{2}, \ldots, l_
 The planning procedure consists of formalizing the robot activities as an MDP using the PRU+ task definition. This procedure is based on two steps: 1) generating an MDP from a PRU+, 2) compute the optimal policy for the generated MDP.
 In the following we define the $MDP = <S, A, R, T> $ where : 
 \begin{itemize}
-\item $S$ is a set of states defined by $[l, m, o, SVU]$ where $l$ is the level of the PRU, $m$ is a module of the level $l$, $o$ is an option of module $m$ and SVU are  state variables defining the execution context representing the subset of variables to be considered for the option $o$. 
+\item $S$ is a set of states defined by $x = [l, m, o, v]$ where $l$ is the level of the PRU, $m$ is a module of the level $l$, $o$ is an option of module $m$ and $v$ are  state variables defining the execution context representing the subset of variables to be considered for the option $o$. 
 \item $A$ is the set of actions consisting of execution of one module of the next levels $E$ or skipping the level  $S$. 
 \item T is the transition function defined as follows : 
 \begin{itemize}
-\item $ Pr([l+1,m',o',svu'] | [l,m,o,svu], E) = p(o')$, this means when execution module $m'$ at state [$l,m,o,svu]$ we move to state $[l',m',o',svu']$ with probability p(o') representing the probability to get the outcome $o'$. % (for example executing module goto location (4,5), there is a probability p((3,5)) to get the outcome (3,5) because of uncertainty.
-\item $Pr([l+2, m' , o' , svu' ] | [l,m,o,svu], S) = 1$, this transition is deterministic because we skip level $l+1$ and we move to level $l+2$. 
+\item $ Pr([l+1,m',o',v'] | [l,m,o,v], E) = p(o')$, this means when execution module $m'$ at state [$l,m,o,v]$ we move to state $[l',m',o',v']$ with probability p(o') representing the probability to get the outcome $o'$. % (for example executing module goto location (4,5), there is a probability p((3,5)) to get the outcome (3,5) because of uncertainty.
+\item $Pr([l+2, m' , o' , v' ] | [l,m,o,v], S) = 1$, this transition is deterministic because we skip level $l+1$ and we move to level $l+2$. 
 \end{itemize}
 \item R is the reward function related to the options assessing the benefit to get the outcome; 
 \end{itemize}
 
-From this definition the Bellman equation of our former, becomes : 
-\[ V([l,m,o,svu]) = R(o) + max_{E,S} \sum Pr([l',m',o',svu'] | [l,m,o,svu], a). V([l',m',o',svu'] )  \]
+From this definition, the Bellman equation for our model becomes 
+\[ V(x) = R(o) + max_{E,S} \sum_{x'} Pr(x' | x, a) V(x')  \]
+
+%\[ V([l,m,o,svu]) = R(o) + max_{E,S} \sum Pr([l',m',o',svu'] | [l,m,o,svu], a). V([l',m',o',svu'] )  \]
 
 The optimal policy $\pi$ is computed by a standard MDP solving algorithm based on value-iteration. Moreover, in this algorithm, a tabu-list of actions is used to choose or drop actions to be inserted in the policy.
 This tabu-list is built and updated by the Model updater module, described below in this section, representing the actual feedback coming from the execution layer.
