15-AIIA small modifications

--- a/doc/papers/15-AIIA/AI.tex
+++ b/doc/papers/15-AIIA/AI.tex
@@ -52,7 +52,7 @@ Some examples of predicates for representing the shopping mall are:
 {\tt\bf connect}(door12, hall, caf\'eMarcel)\\
 {\tt\bf open}(door12) \\
 \end{quote}
-\vspace{-2em}
+%\vspace{-2em}
 
 \paragraph{\textbf{Reasoning.}} 
 
