--- a/doc/papers/15-AIIA/impl.tex
+++ b/doc/papers/15-AIIA/impl.tex
@@ -51,7 +51,7 @@ We consider a robot assisting users in an office. The robot welcomes people at t
 
 \begin{figure}
 \centering
-\includegraphics[width=0.99\textwidth]{fig/PRU}
+\includegraphics[width=0.99\textwidth]{fig/PRU_U}
 \caption{PRU+ for printer-assistance and welcome}
 \label{fig:pru}
 \end{figure}
@@ -126,7 +126,7 @@ This policy is then translated into a PNP and executed by the robot.
 
 \begin{figure}
 \centering
-\includegraphics[width=0.9\textwidth]{fig/DIAGPrinter-demo}
+\includegraphics[width=0.9\textwidth]{fig/DIAGprinter-demo}
 \caption{Example of plan execution.}
 \label{fig:DIAGtest}
 \end{figure}
