--- a/doc/papers/15-AIIA/conclu.tex
+++ b/doc/papers/15-AIIA/conclu.tex
@@ -9,7 +9,7 @@ Implementation and preliminary tests of such an integration have been performed 
 Many interesting results are expected from the \coaches project, since the environment and the challenges considered here are very ambitious. 
 Among the several performance evaluation procedures, we aim at including extensive user studies that will be used to validate the effective development of intelligent social robots performing complex tasks in public populated areas. 
 
-We believe that deploying robots in public spaces populated by non-expert users is a fundamental process for the actual design, development and validation of integrated research in Artificial Intelligence and Robotics. Consequently, we envision many significant contributions to this process from the \coaches project.
+We believe that deploying robots in public spaces populated by non-expert users is a fundamental process for the actual design, development and validation of integrated research in Artificial Intelligence and Robotics. Consequently, we envision many significant contributions to this research area from the \coaches project.
 
 
 
