--- a/doc/papers/15-AIIA/main.tex
+++ b/doc/papers/15-AIIA/main.tex
@@ -74,7 +74,7 @@ In this paper, we provide an overview of the \coaches project which addresses fu
 
 \input{conclu}
 
-\paragraph{\bf  Acknowledgements.}
+\subsection*{Acknowledgements}
 
 \coaches is funded within the CHIST-ERA 4$^{th}$ Call for Research projects, 2013,
 Adaptive Machines in Complex Environments (AMCE) Section.
