15-ICSR fixed some typos

--- a/doc/papers/15-ICSR/coaches.tex
+++ b/doc/papers/15-ICSR/coaches.tex
@@ -10,7 +10,7 @@
 \end{figure}
 
 In the \coaches project, we aim at further developing this technology, but specifically study, develop and test integration of Artificial Intelligence and Robotics technology in order to develop robots that can suitable interact with users in a complex large public environment, like a shopping mall.
-Figure \ref{fig:env} shows, on the left, the \emph{Rive de l'orne} shooping mall in Caen (France) where the experimental activities of the project will be carried out, on the middle a prototype of the robot that will be used for the preliminary experiments, on the right, the design of the robots that will be realized in Fall 2015.
+Figure \ref{fig:env} shows, on the left, the \emph{Rive de l'orne} shopping mall in Caen (France) where the experimental activities of the project will be carried out, on the middle a prototype of the robot that will be used for the preliminary experiments and, on the right, the design of the robots that will be realized in Fall 2015.
 
 As shown in the figure, in contrast with previous work on social robotics and human-robot interaction, the \coaches environment is very challenging, because populated by many people.
 Moreover, we aim at a more sophisticated interaction using multiple modalities (speech, gesture, touch user interfaces) and dialog generated on-line according to the current situation
@@ -35,7 +35,7 @@ the  project  (especially  to  integrate  and  test  various  algorithms  and/or
 Such an open architecture will also simplify and optimize integration efficiency as well as re-use of assets in other projects or products. 
 
 
-For the development of the software robotics components, the Robot Operating System (ROS)\footnote{www.ros.org}, which is the standard middleware for robotics applications, has been selected.
+For the development of the robotic software components, the Robot Operating System (ROS)\footnote{www.ros.org}, which is the standard middleware for robotics applications, has been selected.
 ROS provides the middleware infrastructure to effectively share information among the many modules implementing various functionalities on each robot. Moreover, an interface (ROS-through-TCP) will be realized in order to share information among the robots and between ROS and non-ROS components of the system.
 
 The main software components that will be developed for control, reasoning and interaction functionalities of the system are listed below.
