--- a/doc/papers/15-ICSR/system.tex
+++ b/doc/papers/15-ICSR/system.tex
@@ -3,7 +3,7 @@
 \vspace{-0.1cm}
 
 As already mentioned, 
-one of the main goals of the \coaches project is personalized short-term multi-modal interactions with non-expert users, that are typical customers of a shopping mall.
+one of the main goals of the {\coaches} project is personalized short-term multi-modal interactions with non-expert users, that are typical customers of a shopping mall.
 
 \begin{figure}
 \centering
