--- a/doc/papers/15-ICSR/abstract.tex
+++ b/doc/papers/15-ICSR/abstract.tex
@@ -3,6 +3,6 @@
 Social robots will be soon deployed in large public spaces populated by many people. This scenario differs from personal domestic robots, since it is characterized by multiple short-term interactions with unknown people rather than by a long-term interaction with the known user.
 In particular, short-term interactions with people in a public area must be effective, personalized and socially acceptable.
 In this paper, we present the design and implementation of an Interaction Module that allows to personalize short-term multi-modal interactions. This module is based on explicit representation of social norms and thus provides a high degree of variability in the personalization of the interactions, maintaining easy extendibility and scalability.
-The module is designed within the framework of the \coaches project and some implementation details are provided in order to demonstrate its feasibility and capabilities.
+The module is designed within the framework of the {\coaches} project and some implementation details are provided in order to demonstrate its feasibility and capabilities.
 \end{abstract}
 
