--- a/doc/papers/15-ICSR/conclu.tex
+++ b/doc/papers/15-ICSR/conclu.tex
@@ -8,4 +8,4 @@ profile and a set of domain-independent social norms. This provides
 the system with a high level of scalability and, as shown in our
 examples, allows for being easily extended to a variety of interactions.
 
-The on-going \coaches project is the main experimental test-bed for the work presented in this paper. Future work thus include a user study, whose main focus will be assessing improved acceptance of a social robot with personalized interactions. With the approach described in this paper, producing different versions of the interaction behavior of the robot is as easy as adding or removing a social norm.
+The on-going {\coaches} project is the main experimental test-bed for the work presented in this paper. Future work thus include a user study, whose main focus will be assessing improved acceptance of a social robot with personalized interactions. With the approach described in this paper, producing different versions of the interaction behavior of the robot is as easy as adding or removing a social norm.
