--- a/doc/papers/15-ICSR/intro.tex
+++ b/doc/papers/15-ICSR/intro.tex
@@ -12,9 +12,9 @@ In this context, \emph{Personalized} means that the robot should use different f
 \emph{Short-term} means that the interactions are short and focused on only one particular communicative objective, avoiding long and complex interactions; while
 \emph{Multi-modality} is obtained by using different interaction devices on the robot (although in this study, we focus only on speech and graphical interfaces).
 
-The solution described in this paper is developed within the context of the \coaches  project, 
+The solution described in this paper is developed within the context of the {\coaches}  project, 
 that aims at developing and deploying autonomous robots providing personalized and socially acceptable assistance to customers and shop managers of a shopping mall.
 The main contribution of this paper is on the architecture of the Interaction Module that has several novelties and advantages: 1) integrated management of all the robotic activities (including basic robotic functionalities and interactions), 2) explicit representation of social norms that are domain and task independent, 3) personalized interactions obtained through explicit representation of information and not hand-coded in the implementation of the robot behavior.
 
-In the rest of this paper, after an analysis of the literature in personalized human-robot interaction (Section 2) and a brief description of the general architecture of the \coaches system (Section 3), we describe the human-robot interaction component and, in particular, our approach to personalized short-term multi-modal interaction (Section 4). In Section 5, we provide some examples of application of the proposed system and finally we draw conclusions in Section 6.
+In the rest of this paper, after an analysis of the literature in personalized human-robot interaction (Section 2) and a brief description of the general architecture of the {\coaches} system (Section 3), we describe the human-robot interaction component and, in particular, our approach to personalized short-term multi-modal interaction (Section 4). In Section 5, we provide some examples of application of the proposed system and finally we draw conclusions in Section 6.
 
