LI new Fig. 2 and other changes

--- a/doc/papers/15-ICSR/conclu.tex
+++ b/doc/papers/15-ICSR/conclu.tex
@@ -1,11 +1,9 @@
 \vspace{-0.2cm}
 \section{Conclusions}
 \vspace{-0.1cm}
-In this paper we have presented our architecture for personalized
-short-term human-robot interaction. Robot actions have been described
-through PNPs that can be dynamically adapted according to the user
-profile and a set of domain-independent social norms. This provides
-the system with a high level of scalability and, as shown in our
-examples, allows for being easily extended to a variety of interactions.
+
+In this paper we have presented our architecture for personalized short-term human-robot interaction to be used by {\coaches} robots that will autonomously provide services to customers in a shopping mall.
+Robot actions and interactions with users have been described through PNPs that can be dynamically adapted according to the user profile and a set of domain-independent social norms. This capability provides the system with a high level of scalability and, as shown in our examples, allows for being easily extended to a variety of interactions.
+Implementation of the HRI module presented in this paper has been tested in our lab with a prototype robot and not yet in the real environment with real users.
 
 The on-going {\coaches} project is the main experimental test-bed for the work presented in this paper. Future work thus include a user study, whose main focus will be assessing improved acceptance of a social robot with personalized interactions. With the approach described in this paper, producing different versions of the interaction behavior of the robot is as easy as adding or removing a social norm.
