--- a/doc/papers/15-ICSR/implementation.tex
+++ b/doc/papers/15-ICSR/implementation.tex
@@ -1,7 +1,8 @@
 \vspace{-0.2cm}
 \section{Examples of personalized interactions}
 \vspace{-0.1cm}
-In this section we will show through a set of examples how general purpose social norms are used to affect the behavior of the robot in a declarative way. The examples are taken from the use cases of the {\coaches} project and they will be eventually fully implemented and tested with real robots in the shopping mall in Caen. The examples below refer to the social norms described as an example in Section \ref{sec:pers} and assume user profiles are available.
+
+In this section we will show through a set of examples how general purpose social norms are used to affect the behavior of the robot in a declarative way. The examples are taken from the use cases of the {\coaches} project and they will be eventually fully implemented and tested with real robots in the shopping mall in Caen. The examples below refer to the social norms described in Section \ref{sec:pers} and assume user profiles are available.
 
 \paragraph{Example 1. Advertising.} One of the tasks of the {\coaches} robot is to show advertisements to users of the shopping mall. These advertisements (in forms of text, images, videos, etc.) are provided by the shop manager and stored in the Media Library. 
 In one form of advertising planned in the project the robot knows the user profile. In this case the Interaction Module described in the previous section can activate personalized messages.
