--- a/doc/papers/15-ICSR/conclu.tex
+++ b/doc/papers/15-ICSR/conclu.tex
@@ -6,4 +6,5 @@ In this paper we have presented our architecture for personalized short-term hum
 Robot actions and interactions with users have been described through PNPs that can be dynamically adapted according to the user profile and a set of domain-independent social norms. This capability provides the system with a high level of scalability and, as shown in our examples, allows for being easily extended to a variety of interactions.
 Implementation of the HRI module presented in this paper has been tested in our lab with a prototype robot and not yet in the real environment with real users.
 
-The on-going {\coaches} project is the main experimental test-bed for the work presented in this paper. Future work thus include a user study, whose main focus will be assessing improved acceptance of a social robot with personalized interactions. With the approach described in this paper, producing different versions of the interaction behavior of the robot is as easy as adding or removing a social norm.
+The on-going {\coaches} project is the main experimental test-bed for the work presented in this paper. Future work  will thus include a user study, whose main focus will be assessing improved acceptance of a social robot with personalized interactions. With the approach described in this paper, producing different versions of the interaction behavior of the robot is as easy as adding or removing a social norm.
+However, in certain cases, personalization based on social norms may not be sufficient due to individual exceptions. Therefore, a more detailed individualization level applied to single users will also be subject of further studies.
