--- a/doc/papers/15-ICSR/system.tex
+++ b/doc/papers/15-ICSR/system.tex
@@ -8,7 +8,7 @@ one of the main goals of the {\coaches} project is personalized short-term multi
 \begin{figure}
 \centering
 \includegraphics[width=0.9\textwidth]{fig/HRI_new.png}
-\caption{Architecture of Interaction Module.}
+\caption{Architecture of Human-Robot Interaction module.}
 \label{fig:WP3}
 \end{figure}
 
